fixed select component overflow scroll issue by setting a fixed height to the options

--- a/components/select/select.styles.scss
+++ b/components/select/select.styles.scss
@@ -1,13 +1,18 @@
 .select {
   overflow: hidden;
 
+  &:not(:last-child) {
+    // margin-bottom: 1rem;
+  }
+
   &__header {
-    
+    font-family: $font-primary;
   }
 
   &__options {
-    height: 100%;
+    height: 8rem;
     list-style: none;
     overflow: scroll;
+    border: 1px solid $color-black;
   }
 }
